# Lvgl-mcp-esp32

./: .gitignore  .gitmodules  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
examples/: 01-button-slider.json  02-dashboard.json  04-esp32-small.json  ebrew-01-menu.json  ebrew-02-overview.json  ebrew-03-loading.json  ebrew-04-pump.json  ebrew-05-control.json  ebrew-06-thermostats.json  ebrew-07-graphs.json  ebrew-08-sysinfo.json
mcp-server/: package-lock.json  package.json  test-demo.mjs  test-ebrew.mjs
mcp-server/scripts/: postinstall.mjs
mcp-server/src/: index.ts
mcp-server/src/resources/: api-reference.ts
mcp-server/src/simulator/: compiler.ts  manager.ts  screenshot.ts
mcp-server/src/tools/: config.ts  inspect.ts  render.ts
scripts/: build.bat  setup.ps1
simulator/: CMakeLists.txt  lv_conf.h  main.c
simulator/export/: screenshot.c  screenshot.h  widget_tree.c  widget_tree.h
simulator/hal/: display_driver.c  display_driver.h
simulator/templates/: user_code_wrapper.c
